--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* Establecemos el tamaño de la pagina y establecer el tipo de letra como Poppins */
 body{
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
@@ -16,7 +17,7 @@ body{
   box-sizing: border-box;
 }
 
-
+ /* Esta zona representa la barra de interfaz */ 
 nav {
   display: flex;
   justify-content: space-between;
@@ -91,11 +92,13 @@ li.nav-link a {
     display: none;
   }
 }
+ /* HASTA ACA */ 
 
 /* It is ready */
 /* Have a good time */
 
-/*                                                                          */
+/*                                                                                                                                                                                           */
+/* En el primer contenedor lo defino como relativo, con una altura y anchura */
 
 .container1 {
     position: relative;
@@ -103,6 +106,7 @@ li.nav-link a {
     height: 100vh;
 }
 
+/* Estbalesco el tamaño de la letra, su color, su margen superior, el de la derecha  */
 .text1{
     font-weight: bold;
     font-size: xx-large;
@@ -119,6 +123,7 @@ li.nav-link a {
     margin-left: 180px;
 }
 
+/* Esta es la base del boton, podria decirse que la original */
 .botton a:link, a:visited{
     background-color: #ff702a;
     color: white;
@@ -139,11 +144,13 @@ li.nav-link a {
     text-decoration: underline;
 }
 
+/* Al momento en el que el maus pase por ensima del boton, el boton cambiara de color*/
 .botton a:hover, a:active {
     color:rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
 }
 
+/* Establecemos las direcciones de la app */
 .imagen1 {
     position: relative;
     bottom: 400px;
@@ -151,6 +158,7 @@ li.nav-link a {
 
 }
 
+/* Definimos el 2 contenedor, su posicion y su tamaño */
 .container2 {
   position: relative;
   width: 100vh;
@@ -180,6 +188,8 @@ li.nav-link a {
   margin-left: 1000px;
 }
 
+/* Lo mismo del primer botton */
+
 .botton2 a:link, a:visited{
   background-color: #ff702a;
   color: white;
@@ -195,11 +205,17 @@ li.nav-link a {
   position: relative;
 }
 
+
+/* Lo mismo del primer botton */
+
 .botton2 a:hover{
   color:rgb(0, 0, 0);
   background-color: transparent;
   text-decoration: underline;
 }
+
+
+/* Lo mismo del primer botton */
 
 .botton2 a:hover, a:active {
   color:rgb(0, 0, 0);
@@ -215,6 +231,8 @@ li.nav-link a {
 
 /* Tercer Contenedor */
 
+/* Ademas del color, y el tamaño, hay otros atributos importantes tales como el margin top (Espacio desde la parte superior de la pagina hasta el texto o info escrita) y margin-left  */
+
 .text1-3{
   font-weight: bold;
   color: #ff702a;
@@ -225,6 +243,7 @@ li.nav-link a {
 }
 
 .text2-3{
+  /* Ademas del color, y el tamaño, hay otros atributos importantes tales como el margin top (Espacio desde la parte superior de la pagina hasta el texto o info escrita) y margin-left que sirve para lo mismo pero en lugar de arriba hasta abajo es de lado hasta que un cuerpo interrumpa */
   font-weight: bold;
   font-size: 60px;
   color: #ffffff;
@@ -293,11 +312,13 @@ li.nav-link a {
   text-align: center;
 }
 
+/* Me permite establecer una propiedad especifica a varios elementos */
 .cuadrado{
   display: inline-block;
 }
 
 .cuadrado-1 {
+  /* Se establece el margen derecho y izqierdo*/
   margin-left: 350px;
   margin-right: 15px;
 }
@@ -372,7 +393,7 @@ li.nav-link a {
   font-size: 60px;
   color: #000000;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 90px;
 
 }
 
@@ -403,4 +424,29 @@ li.nav-link a {
 
 html {
   scroll-behavior: smooth;
+}
+
+table {
+  padding-top: 200px;
+  padding-bottom: 80px;
+  text-align: left;
+  margin-left: 365px;
+}
+
+.Titulos {
+  font-weight: bold;
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.lol {
+  padding-right: 150px;
+}
+
+.intermedio {
+  color: #ff702a;
+}
+
+.text1-6 {
+  color: #ffffff;
 }
